cam updated again!

--- a/newfile.html
+++ b/newfile.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
- <title>hello Mister To!</title>
+ <title>This is the new file.</title>
 </head>
 <body>
- hello Mister To!
+ This is the new file.
 </body>
 </html>
