Changed the name to Cam

--- a/helloworld.html
+++ b/helloworld.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
- <title>hello Mister To!</title>
+ <title>hello Cam!</title>
 </head>
 <body>
- hello Mister To!
+ hello Cam!
 </body>
 </html>
