adding all the moonlight

--- a/index.html
+++ b/index.html
@@ -1,94 +1,129 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>PhotoBox - Dad Loves Competition</title>
-<link rel="stylesheet" href="css/foundation.css" />
-<script src="js/vendor/modernizr.js"></script>
+
+ <title>PhotoBox - Dad Loves Competition</title>
+
+ <meta charset="utf-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta name="author" content="Cameron & Andrew">
+ <meta name="description" content="If you want something done right, do it yourself.">
+ <meta name="keywords" content="HTML5, CSS3, JavaScript">
+
+ <meta property="og:locale" content="en_GB" />
+ <meta property="og:site_name" content="PhotoBox" />
+ <meta property="og:title" content="Dad Loves - PhotoBox Competition" />
+ <meta property="og:url" content="http://fathersday.photobox.co.uk/" />
+ <meta property="og:video" content="http://www.youtube.com/v/CkBZuPn9rE0" />
+ <meta property="og:image" content="http://assets.photobox.com/assets/content_graphics/files/marketing/_________NOT_SETUP________" />
+
+ <script async src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+ <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+
+ <script async src="js/foundation.min.js"></script>
+ <script async src="js/vendor/modernizr.js"></script>
+
+ <script async src="js/main.js"></script>
+
+ <link rel="stylesheet" href="css/foundation.css" />
+ <link rel="stylesheet" href="css/main.css" />
+
 </head>
 <body>
-<div class="row">
- <div class="large-12 columns">
-  <div class="nav-bar right">
-   <ul class="button-group">
-    <li><a href="#" class="button">Link 1</a></li>
-    <li><a href="#" class="button">Link 2</a></li>
-    <li><a href="#" class="button">Link 3</a></li>
-    <li><a href="#" class="button">Link 4</a></li>
+
+ <div class="meta row">
+  <div class="large-12 columns small-text-center">
+   <a href="http://www.photobox.co.uk/" title="PhotoBox"><h1><span>PhotoBox</span></h1></a>
+  </div>
+ </div>
+
+ <div class="head row">
+  <div class="child1 large-6 medium-6 small-12 columns">
+   <div class="small-centered columns large-text-right small-text-center">
+    <img src="http://placehold.it/340x240.png/f90/fff&text=This+is+the+Framework" alt="">
+   </div>
+  </div>
+  <div class="child2 large-6 medium-6 small-12 columns">
+   <ul class="text-center">
+    <li><a href="http://www.facebook.com/photoboxpbx/" class="facebook button" title="Follow PhotoBox on Facebook"><span>Facebook</span></a></li>
+    <li><a href="http://twitter.com/photobox/" class="twitter button" title="Follow PhotoBox on Twitter"><span>Twitter</span></a></li>
+    <li><a href="https://instagram.com/photoboxuk/" class="instagram button" title="Follow PhotoBox on Instagram"><span>Instagram</span></a></li>
    </ul>
-  </div>
-  <h1>Blog <small>This is my blog. It's awesome.</small></h1>
-  <hr/>
- </div>
-</div>
-<div class="row">
- <div class="large-9 columns" role="content">
-  <article>
-   <h3><a href="#">Blog Post Title</a></h3>
-   <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-   <div class="row">
-    <div class="large-6 columns">
-     <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-     <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-    </div>
-    <div class="large-6 columns"> <img src="http://placehold.it/400x240&text=[img]"/> </div>
-   </div>
-   <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-   <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-  </article>
-  <hr/>
-  <article>
-   <h3><a href="#">Blog Post Title</a></h3>
-   <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-   <div class="row">
-    <div class="large-6 columns">
-     <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-     <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-    </div>
-    <div class="large-6 columns"> <img src="http://placehold.it/400x240&text=[img]"/> </div>
-   </div>
-   <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-   <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-  </article>
- </div>
- <aside class="large-3 columns">
-  <h5>Categories</h5>
-  <ul class="side-nav">
-   <li><a href="#">News</a></li>
-   <li><a href="#">Code</a></li>
-   <li><a href="#">Design</a></li>
-   <li><a href="#">Fun</a></li>
-   <li><a href="#">Weasels</a></li>
-  </ul>
-  <div class="panel">
-   <h5>Featured</h5>
-   <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-   <a href="#">Read More →</a> </div>
- </aside>
-</div>
-<footer class="row">
- <div class="large-12 columns">
-  <hr/>
-  <div class="row">
-   <div class="large-6 columns">
-    <p>© Copyright no one at all. Go to town.</p>
-   </div>
-   <div class="large-6 columns">
-    <ul class="inline-list right">
-     <li><a href="#">Link 1</a></li>
-     <li><a href="#">Link 2</a></li>
-     <li><a href="#">Link 3</a></li>
-     <li><a href="#">Link 4</a></li>
-    </ul>
-   </div>
+   <div class="ribbon text-center">#iartdad</div>
   </div>
  </div>
-</footer>
-<script src="js/vendor/jquery.js"></script> 
-<script src="js/foundation.min.js"></script> 
-<script>
- $(document).foundation();
- </script>
+
+ <div class="feature row">
+  <div class="large-12 columns" role="content">
+   <article>
+    <div class="row">
+     <div class="large-6 columns large-text-left small-text-center">
+      <h2><a href="#">Want to see your Dad photo in the National Portrait Gallery?</a></h2>
+      <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
+     </div>
+     <div class="large-6 columns large-text-right small-text-center"> <img src="http://placehold.it/400x240&text=[img]"/> </div>
+    </div>
+   </article>
+  </div>
+ </div>
+
+ <div class="player row">
+  <div class="letterbox small-12 columns">
+   <a id="videotoggle" class="success"><span>Play Video</span></a>
+   <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="videolayer" class="small-12 columns">
+    <source src="http://demosthenes.info/assets/videos/polina.webm" type="video/webm">
+    <source src="http://demosthenes.info/assets/videos/polina.mp4" type="video/mp4">
+   </video>
+  </div>
+ </div>
+
+ <div class="gallery row">
+  <div class="large-12 columns" role="content">
+   <h2><a href="#">Come check out the goods...</a></h2>
+   <article>
+    <div class="row">
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+    </div>
+    <div class="row">
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+    </div>
+    <div class="row">
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+    </div>
+    <div class="row">
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+    </div>
+   </article>
+  </div>
+ </div>
+
+
+
+ <footer class="row">
+  <div class="large-12 columns">
+   <hr/>
+   <div class="row">
+    <div class="large-6 columns">
+     <p>&copy; PhotoBox (alpha).</p>
+    </div>
+    <div class="large-6 columns">
+     <ul class="inline-list right">
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 2</a></li>
+      <li><a href="#">Link 3</a></li>
+      <li><a href="#">Link 4</a></li>
+     </ul>
+    </div>
+   </div>
+  </div>
+ </footer>
 </body>
 </html>
