--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
 
- <title>PhotoBox - Dad Loves Competition</title>
+ <title>Dad Loves Competition</title>
 
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,13 +17,11 @@
  <meta property="og:video" content="http://www.youtube.com/v/CkBZuPn9rE0" />
  <meta property="og:image" content="http://assets.photobox.com/assets/content_graphics/files/marketing/_________NOT_SETUP________" />
 
- <script async src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
- <script async src="js/foundation.min.js"></script>
- <script async src="js/vendor/modernizr.js"></script>
-
- <script async src="js/main.js"></script>
+ <script src="js/vendor/modernizr.js"></script>
+ <script src="js/main.js"></script>
 
  <link rel="stylesheet" href="css/foundation.css" />
  <link rel="stylesheet" href="css/main.css" />
@@ -71,8 +69,8 @@
   <div class="letterbox small-12 columns">
    <a id="videotoggle" class="success"><span>Play Video</span></a>
    <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="videolayer" class="small-12 columns">
-    <source src="http://demosthenes.info/assets/videos/polina.webm" type="video/webm">
-    <source src="http://demosthenes.info/assets/videos/polina.mp4" type="video/mp4">
+    <source src="http://demosthenes.info/assets/videos/polina.webm" type="video/webm" />
+    <source src="http://demosthenes.info/assets/videos/polina.mp4" type="video/mp4" />
    </video>
   </div>
  </div>
@@ -82,24 +80,19 @@
    <h2><a href="#">Come check out the goods...</a></h2>
    <article>
     <div class="row">
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-    </div>
-    <div class="row">
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-    </div>
-    <div class="row">
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-    </div>
-    <div class="row">
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
-     <div class="candidate large-4 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
+     <div class="candidate large-2 small-3 columns text-center"> <img src="http://placehold.it/400x540&text=[img]"/> </div>
     </div>
    </article>
   </div>
@@ -125,5 +118,11 @@
    </div>
   </div>
  </footer>
+ <script src="/js/vendor/jquery.js"></script>
+ <script src="/js/vendor/fastclick.js"></script>
+ <script src="js/foundation.min.js"></script>
+ <script>
+ $(document).foundation();
+ </script>
 </body>
 </html>
