--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <meta property="og:image" content="http://assets.photobox.com/assets/content_graphics/files/marketing/_________NOT_SETUP________" />
 
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+ <script>window.jQuery || document.write('<script src="js/vendor/jquery.js"><\/script>')</script>
 
  <script src="js/vendor/modernizr.js"></script>
  <script src="js/main.js"></script>
@@ -118,9 +118,8 @@
    </div>
   </div>
  </footer>
- <script src="/js/vendor/jquery.js"></script>
- <script src="/js/vendor/fastclick.js"></script>
- <script src="js/foundation.min.js"></script>
+ <script src="./js/vendor/fastclick.js"></script>
+ <script src="./js/foundation.min.js"></script>
  <script>
  $(document).foundation();
 
@@ -141,7 +140,7 @@ $.getJSON("http://assets.photobox.com/assets/content_graphics/files/marketing/pr
     text += galleryEntry.ident;
    }
    alert(text);
-  }
+  },
   error: function () {
    console.log('Dammit!');
   }
